--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+node_modules
+node_modules/
+/node_modules
+
+config/config.json
+/config/config.json
+
+.env
+.env.example
+.env.local
+.env.staging
