--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,27 @@
-# Avoid accidental upload of the Sketch and Figma design files
-#####################################################
-## Please do not remove lines 5 and 6 - thanks! 🙂 ##
-#####################################################
-*.sketch
-*.fig
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Avoid accidental XD upload if you convert the design file
-###############################################
-## Please do not remove line 12 - thanks! 🙂 ##
-###############################################
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.eslintcache
+/design
+/starter
 *.xd
 
-# Avoid your project being littered with annoying .DS_Store files!
-.DS_Store
-.prettierignore
-
-node_modules
-node_modules/
-/node_modules
-
-config/config.json
-/config/config.json
-
-.env
-.env.example
-.env.local
-.env.staging
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
