--- a/starter/.gitignore
+++ b/starter/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
+/design
+/starter
+*.xd
 
 npm-debug.log*
 yarn-debug.log*
